--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -464,7 +464,7 @@ jobs:
     timeout-minutes: 60
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", "3.11.0-beta.3"]
     steps:
       - name: Check out code from GitHub
         uses: actions/checkout@v3.0.2
@@ -684,7 +684,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", "3.11.0-beta.3"]
     name: Run pip check ${{ matrix.python-version }}
     steps:
       - name: Check out code from GitHub
@@ -731,7 +731,7 @@ jobs:
       fail-fast: false
       matrix:
         group: ${{ fromJson(needs.info.outputs.test_groups) }}
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", "3.11.0-beta.3"]
     name: >-
       Run tests Python ${{ matrix.python-version }} (${{ matrix.group }})
     steps:
