--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2071,7 +2071,7 @@ regenmaschine==2022.06.1
 renault-api==0.1.11
 
 # homeassistant.components.python_script
-restrictedpython==5.2
+restrictedpython==6.0a1.dev0
 
 # homeassistant.components.idteck_prox
 rfk101py==0.0.1
