--- a/homeassistant/components/default_config/manifest.json
+++ b/homeassistant/components/default_config/manifest.json
@@ -10,6 +10,7 @@
     "dhcp",
     "energy",
     "frontend",
+    "homeassistant_alerts",
     "history",
     "input_boolean",
     "input_button",
